# sdp

./: .beads-sdp-mapping.jsonl  .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitmessage  .gitmodules  .golangci.yml  AGENTS.md  AGENT_HANDOFF.md  BEADS_INTEGRATION_STATUS.md  BEADS_PHASE2_PROGRESS.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  CONTRIBUTING.md  DEVELOPMENT.md  F032-PHASE4-SUMMARY.md  MODELS.md  PRODUCT_VISION.md  PROTOCOL.md  README.md  README_RU.md  RULES_COMMON.md  SECURITY.md  START_HERE.md  VISION.md  WORKFLOW.md  WS-DOC-02-completion.md  WS-DOC-02-plan.md  WS-REF-01-plan.md  coverage.out  coverage_start.txt  demo.tape  go.mod  go.sum  install.sh  package.json  pyproject.toml  quality-gate.toml  (+2 more)
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: GIT_SAFETY.md  commands.json  settings.json
.claudecode/: settings.json
.codex/: AGENTS.md  INSTALL.md
.cursor/: README.md  worktrees.json
.github/: dependabot.yml
.oneshot/: F011-checkpoint.json  F011-progress.json  sdp-118-checkpoint.json
.opencode/: README.md  agents  opencode.json
.sdp/: config.yml  guard-rules.yml  orchestrator_state.json  pipeline-hooks.yaml.example  queue_state.json  review_verdict.json  state.json
ci/: Dockerfile.install-test  Dockerfile.protocol-e2e  protocol-e2e-test.sh  run-protocol-e2e-docker.sh  run-protocol-e2e.sh  test-install-docker.sh
demo/: README.md  demo.tape  run-demo.sh
docs/: ADOPTION.md  AGENT_TEAMS.md  CLI_REFERENCE.md  ENGLISH.md  MANIFESTO.md  PRODUCT_CONTRACT.md  PROTOCOL.md  QUICKSTART.md  README.md  ROADMAP.md  SITEMAP.md  (+4 more)
(+2411 files in other folders)
